2001-12-14  Richard Kreckel  <kreckel@ginac.de>

        * include/cln/modules.h, include/cln/object.h: add support for
          s390.
        * src/numtheory/cl_nt_sqrtmodp.cc: workaround for GCC2.x compiler-bug
          on s390, provided by Gerhard Tonn.

2001-11-05  Richard Kreckel  <kreckel@ginac.de>

        * autoconf/ltmain.sh: Upgrade to libtool-1.4.2.
        * autoconf/config.{guess,sub}: Update to GNU version 2001-09-07.
        * Version 1.1.3 released.

2001-11-04  Bruno Haible  <haible@clisp.cons.org>

        Interoperability with gcc-3.0 -fuse-cxa-atexit.
        * autoconf/aclocal.m4 (CL_GLOBAL_CONSTRUCTORS): Add test whether
          global destructors actually exist.
        * include/cln/modules.h (CL_PROVIDE, CL_PROVIDE_END, CL_PROVIDE_END):
          Don't hack the global destructors if there is no global destructors
          function.

2001-11-03  Richard Kreckel  <kreckel@ginac.de>

        * src/float/transcendental/cl_F_sinx.cc (sinx_naive): For small
          values of x, return square(x) instead of x.
        * src/float/transcendental/cl_F_sinhx.cc (sinhx_naive): Likewise.

2001-07-25  Richard Kreckel  <kreckel@ginac.de>

        * Version 1.1.2 released.

2001-07-24  Richard Kreckel  <kreckel@ginac.de>

        * src/base/hash/cl_hash.h: declare _cl_hashtable_iterator<htentry> a
          friend of cl_heap_hashtable<htentry>.

2001-07-22  Richard Kreckel  <kreckel@ginac.de>

        * src/float/base/cl_ieee.cc: try to do magic to the FPU only if
          _FPU_IEEE is really defined.
        * include/cln/modules.h: change assembler labels from `label' to
          `label:' on hppa, needed by Linux (see comment).
        * autoconf/acinclude.m4: new file (for storing CLN-specific macros).
        * Makefile.devel: adjusted.
        * autoconf/aclocal.m4: regenerate.
        * src/base/low/cl_low_mul.cc: moved POD variables that are declared
          extern "C" elsewhere out of the namespace.